==> JamesLinus/stm32/extralib/src/drv/drv_gpio.c <==
#include "../include/drv_api.h"
#include "../include/drv_gpio.h"

int 	gpio_open	(struct platform_device *dev, int flags){
	int ret = -EPERM;
	int bank = gpio_get_bank_index(dev->id);
	int pin = gpio_get_pin_index(dev->id);
	GPIO_InitTypeDef GPIO_InitStructure;

	struct gpio_platform_data* data = (struct gpio_platform_data*)dev->dev.platform_data;
	
	if(bank < 0 || bank >= GPIO_BANK_COUNT ||
		pin < 0 || pin >= GPIO_PIN_COUNT)
		return ret;
	
#if defined(STDPERIPH_DRIVER)
	EXTI_InitTypeDef EXTI_InitStruct;
	NVIC_InitTypeDef NVIC_InitStruct;
	RCC_AHB1PeriphClockCmd(g_gpio_bank_ref[bank].RCC_AHB1Periph_GPIOx, ENABLE);
	GPIO_InitStructure.GPIO_Mode 	= data->dir;
	GPIO_InitStructure.GPIO_Pin 	= (((uint16_t)0x01) << pin);
	GPIO_InitStructure.GPIO_PuPd 	= data->pull;
	GPIO_InitStructure.GPIO_Speed 	= GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_OType 	= GPIO_OType_PP;
	GPIO_Init(g_gpio_bank_ref[bank].GPIOx, &GPIO_InitStructure);
	if(data->intr.mode != GPIO_INTR_MODE_DISABLE){
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);

		SYSCFG_EXTILineConfig(g_gpio_bank_ref[bank].EXTI_PortSourceGPIOx, pin);
		EXTI_InitStruct.EXTI_Line 		= (((uint32_t)1) << pin);
		EXTI_InitStruct.EXTI_LineCmd 	= ENABLE;
		EXTI_InitStruct.EXTI_Mode 		= data->intr.mode;
		EXTI_InitStruct.EXTI_Trigger 	= data->intr.trigger;
		EXTI_Init(&EXTI_InitStruct);

		/* Add IRQ vector to NVIC */
		NVIC_InitStruct.NVIC_IRQChannel 	= g_gpio_pin_ref[pin].NVIC_IRQChannel;
		NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority 	= 6;
		NVIC_InitStruct.NVIC_IRQChannelSubPriority 			= 0;
		NVIC_InitStruct.NVIC_IRQChannelCmd 	= ENABLE;
		NVIC_Init(&NVIC_InitStruct);
	}
#elif defined(STM32CUBEF4)
	switch(bank){
		case 0: __HAL_RCC_GPIOA_CLK_ENABLE(); break;
		case 1: __HAL_RCC_GPIOB_CLK_ENABLE(); break;
		case 2: __HAL_RCC_GPIOC_CLK_ENABLE(); break;
		case 3: __HAL_RCC_GPIOD_CLK_ENABLE(); break;
		case 4: __HAL_RCC_GPIOE_CLK_ENABLE(); break;
		case 5: __HAL_RCC_GPIOF_CLK_ENABLE(); break;
		case 6: __HAL_RCC_GPIOG_CLK_ENABLE(); break;
		case 7: __HAL_RCC_GPIOH_CLK_ENABLE(); break;
		case 8: __HAL_RCC_GPIOI_CLK_ENABLE(); break;
		default: break;
	}
	GPIO_InitStructure.Mode 	= data->dir;
	GPIO_InitStructure.Pin 		= g_gpio_pin_ref[pin].GPIO_Pin;
	GPIO_InitStructure.Pull 	= data->pull;
	GPIO_InitStructure.Speed 	= GPIO_SPEED_HIGH;
	if(data->intr.mode != GPIO_INTR_MODE_DISABLE){
		GPIO_InitStructure.Mode |= data->intr.mode | data->intr.trigger;
		BSP_IntVectSet(g_gpio_pin_ref[pin].IRQChannel, g_gpio_pin_ref[pin].isr);
		HAL_NVIC_SetPriority(g_gpio_pin_ref[pin].irqType, 6, 0);
		HAL_NVIC_EnableIRQ(g_gpio_pin_ref[pin].irqType);
	}
	HAL_GPIO_Init(g_gpio_bank_ref[bank].GPIOx, &GPIO_InitStructure);
#endif
	
	ret = 0;	
	return ret;
}

int 	gpio_close	(struct platform_device *dev){
	int ret = -EPERM;
	return ret;
}

int		gpio_read	(struct platform_device *dev, void* buf, int count){
	int ret = -EPERM;
	struct gpio_platform_data* data = (struct gpio_platform_data*)dev->dev.platform_data;
	unsigned char* p = (unsigned char*)buf;
	int bank = gpio_get_bank_index(dev->id);
	int pin = gpio_get_pin_index(dev->id);
	
	if(count > 0){
#if defined(STDPERIPH_DRIVER)
		*p = GPIO_ReadInputDataBit(g_gpio_bank_ref[bank].GPIOx, g_gpio_pin_ref[pin].GPIO_Pin);
#elif defined(STM32CUBEF4)
		*p = (HAL_GPIO_ReadPin(g_gpio_bank_ref[bank].GPIOx, g_gpio_pin_ref[pin].GPIO_Pin) == GPIO_PIN_SET);
#endif
		ret = 1;
	}
	return ret;
}

int		gpio_write	(struct platform_device *dev, const void* buf, int count){
	int ret = -EPERM;
	struct gpio_platform_data* data = (struct gpio_platform_data*)dev->dev.platform_data;
	unsigned char* p = (unsigned char*)buf;
	int bank = gpio_get_bank_index(dev->id);
	int pin = gpio_get_pin_index(dev->id);
	
	if(count > 0){
#if defined(STDPERIPH_DRIVER)
		if(p[0] == 0) GPIO_ResetBits(g_gpio_bank_ref[bank].GPIOx, (((uint16_t)0x01)<< pin));
		else GPIO_SetBits(g_gpio_bank_ref[bank].GPIOx, (((uint16_t)0x01)<< pin));
#elif defined(STM32CUBEF4)
		HAL_GPIO_WritePin(g_gpio_bank_ref[bank].GPIOx, g_gpio_pin_ref[pin].GPIO_Pin, (p[0] == 1) ? GPIO_PIN_SET : GPIO_PIN_RESET);
#endif
		ret = 0;
	}	
		
	return ret;
}

int		gpio_ioctl	(struct platform_device *dev, int request, unsigned int arguments){
	int ret = -EPERM;
    int bank = gpio_get_bank_index(dev->id);
	int pin = gpio_get_pin_index(dev->id);
    
    switch(request){
        case GPIO_IOC_TOGGLE:{
#if defined(STDPERIPH_DRIVER)
            GPIO_ToggleBits(g_gpio_bank_ref[bank].GPIOx, g_gpio_pin_ref[pin].GPIO_Pin);
#elif defined(STM32CUBEF4)
            HAL_GPIO_TogglePin(g_gpio_bank_ref[bank].GPIOx, g_gpio_pin_ref[pin].GPIO_Pin);
#endif
            ret = 0;
            break;
        }
    }
    
	return ret;
}

void EXTI0_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line0) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 0),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line0);
		/* Was the message posted successfully? */
		if( xResult != pdFAIL )
		{
		  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
		  switch should be requested.  The macro used is port specific and will
		  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
		  the documentation page for the port being used. */
		  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
		}
    }
#elif defined(OS_UCOS)
	OS_ERR os_err;
	LED_TOGGLE(RED);
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_0);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			((uint32_t)1 << 0),
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI1_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line1) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 1),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line1);
		/* Was the message posted successfully? */
		if( xResult != pdFAIL )
		{
		  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
		  switch should be requested.  The macro used is port specific and will
		  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
		  the documentation page for the port being used. */
		  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
		}
    }
#elif defined(OS_UCOS)
	OS_ERR os_err;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_1);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			((uint32_t)1 << 1),
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI2_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line2) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 2),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line2);
		/* Was the message posted successfully? */
		if( xResult != pdFAIL )
		{
		  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
		  switch should be requested.  The macro used is port specific and will
		  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
		  the documentation page for the port being used. */
		  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
		}
    }
#elif defined(OS_UCOS)
	OS_ERR os_err;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_2);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			((uint32_t)1 << 2),
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI3_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line3) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 3),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line3);
		/* Was the message posted successfully? */
		if( xResult != pdFAIL )
		{
		  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
		  switch should be requested.  The macro used is port specific and will
		  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
		  the documentation page for the port being used. */
		  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
		}
    }
#elif defined(OS_UCOS)
	OS_ERR os_err;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_3);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			((uint32_t)1 << 3),
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI4_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line4) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 4),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line4);
		/* Was the message posted successfully? */
		if( xResult != pdFAIL )
		{
		  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
		  switch should be requested.  The macro used is port specific and will
		  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
		  the documentation page for the port being used. */
		  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
		}
    }
#elif defined(OS_UCOS)
	OS_ERR os_err;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_4);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			((uint32_t)1 << 4),
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI9_5_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;
	xResult = pdFAIL;

	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line5) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 5),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line5);
    }
    if (EXTI_GetITStatus(EXTI_Line6) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 6),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line6);
    }
    if (EXTI_GetITStatus(EXTI_Line7) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 7),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line7);
    }
    if (EXTI_GetITStatus(EXTI_Line8) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 8),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line8);
    }
    if (EXTI_GetITStatus(EXTI_Line9) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 9),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line9);
    }
	/* Was the message posted successfully? */
	if( xResult != pdFAIL )
	{
	  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
	  switch should be requested.  The macro used is port specific and will
	  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
	  the documentation page for the port being used. */
	  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
	}
#elif defined(OS_UCOS)
	OS_ERR os_err;
	uint32_t flags = 0;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_5))
		flags |= (uint32_t)1 << 5;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_6))
		flags |= (uint32_t)1 << 6;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_7))
		flags |= (uint32_t)1 << 7;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_8))
		flags |= (uint32_t)1 << 8;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_9))
		flags |= (uint32_t)1 << 9;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			flags,
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}

void EXTI15_10_IRQHandler(void) {
#if defined(OS_FREERTOS)
	static BaseType_t xHigherPriorityTaskWoken, xResult;
	xResult = pdFAIL;
	/* Make sure that interrupt flag is set */
	if (EXTI_GetITStatus(EXTI_Line10) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 10),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line10);
    }
    if (EXTI_GetITStatus(EXTI_Line11) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 11),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line11);
    }
    if (EXTI_GetITStatus(EXTI_Line12) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 12),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line12);
    }
    if (EXTI_GetITStatus(EXTI_Line13) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 13),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line13);
    }
    if (EXTI_GetITStatus(EXTI_Line14) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 14),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line14);
    }
    if (EXTI_GetITStatus(EXTI_Line15) != RESET) {
		xHigherPriorityTaskWoken = pdFALSE;
		xResult = xEventGroupSetBitsFromISR(
				g_gpio_driver_arch_data.event,
				(((uint8_t)1)<< 15),
				&xHigherPriorityTaskWoken);
		/* Clear interrupt flag */
		EXTI_ClearITPendingBit(EXTI_Line15);
    }
    /* Was the message posted successfully? */
	if( xResult != pdFAIL )
	{
	  /* If xHigherPriorityTaskWoken is now set to pdTRUE then a context
	  switch should be requested.  The macro used is port specific and will
	  be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() - refer to
	  the documentation page for the port being used. */
	  portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
	}
#elif defined(OS_UCOS)
	OS_ERR os_err;
	uint32_t flags = 0;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_10))
		flags |= (uint32_t)1 << 10;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_11))
		flags |= (uint32_t)1 << 11;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_12))
		flags |= (uint32_t)1 << 12;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_13))
		flags |= (uint32_t)1 << 13;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_14))
		flags |= (uint32_t)1 << 14;
	if(__HAL_GPIO_EXTI_GET_FLAG(GPIO_PIN_15))
		flags |= (uint32_t)1 << 15;
	__HAL_GPIO_EXTI_CLEAR_FLAG(GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15);
	OSFlagPost(&g_gpio_driver_arch_data.event,
			flags,
			OS_OPT_POST_FLAG_SET,
			&os_err);
#endif
}
